[gd_scene load_steps=14 format=2]

[ext_resource path="res://Materials/ground_debug.tres" type="Material" id=1]
[ext_resource path="res://Materials/obj_debug.tres" type="Material" id=2]
[ext_resource path="res://Sprites/OWPlayer.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Scripts/PlayerMovement.gd" type="Script" id=4]
[ext_resource path="res://UIManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/OW_NPC.gd" type="Script" id=6]
[ext_resource path="res://Sprites/OWShady.tres" type="SpriteFrames" id=7]
[ext_resource path="res://Sprites/OWBeanie.tres" type="SpriteFrames" id=8]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.499058, 0.502397, 0.497482 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 1, 1 )

[sub_resource type="CylinderShape" id=4]
height = 0.219068
radius = 0.0690668

[sub_resource type="CylinderShape" id=5]
height = 0.237356
radius = 0.182869

[node name="Spatial" type="Spatial"]

[node name="UIManager" parent="." instance=ExtResource( 5 )]

[node name="Environment" type="Spatial" parent="."]

[node name="Floor" type="MeshInstance" parent="Environment"]
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="Obstacle1" type="StaticBody" parent="Environment"]
transform = Transform( 0.158296, 0, -0.244478, 0, 0.2, 0, 0.122239, 0, 0.316592, 0.350529, 0.1, 0.44689 )

[node name="CollisionShape" type="CollisionShape" parent="Environment/Obstacle1"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Environment/Obstacle1"]
mesh = SubResource( 2 )
skeleton = NodePath("../..")
material/0 = ExtResource( 2 )

[node name="Obstacle2" type="StaticBody" parent="Environment"]
transform = Transform( 0.0938529, 0, 0.20712, 0, 0.2, 0, -0.03452, 0, 0.563118, -0.501695, 0.1, 0.0718488 )

[node name="CollisionShape" type="CollisionShape" parent="Environment/Obstacle2"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Environment/Obstacle2"]
mesh = SubResource( 2 )
skeleton = NodePath("../..")
material/0 = ExtResource( 2 )

[node name="Player" type="KinematicBody" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.11, 0 )
shape = SubResource( 4 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.110684, 0 )
billboard = 2
frames = ExtResource( 3 )
animation = "standDL"
playing = true

[node name="CameraMount" type="Spatial" parent="Player"]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0 )

[node name="Camera" type="Camera" parent="Player/CameraMount"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0.000309885, 0.499868, 1.41452 )
current = true
fov = 30.0

[node name="SpringArm" type="SpringArm" parent="Player/CameraMount"]
transform = Transform( 1, 0, 0, 0, 0.944031, 0.329855, 0, -0.329855, 0.944031, 0, 0, 0 )
visible = false

[node name="TalkableArea" type="Area" parent="Player"]

[node name="CollisionShape" type="CollisionShape" parent="Player/TalkableArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.11, 0 )
shape = SubResource( 5 )

[node name="TestNPC" type="StaticBody" parent="." groups=["NPC"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.37167, 0, -0.134043 )
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="TestNPC"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.11, 0 )
shape = SubResource( 4 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="TestNPC"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.110684, 0 )
flip_h = true
billboard = 2
frames = ExtResource( 7 )
playing = true

[node name="TestNPC2" type="StaticBody" parent="." groups=["NPC"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.175391, 0, -0.428631 )
script = ExtResource( 6 )
conversant_id = 1
conversant_name = "Beanie"

[node name="CollisionShape" type="CollisionShape" parent="TestNPC2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.11, 0 )
shape = SubResource( 4 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="TestNPC2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.110684, 0 )
flip_h = true
billboard = 2
frames = ExtResource( 8 )
frame = 1
playing = true

[connection signal="convo_available" from="Player" to="UIManager" method="_on_Player_convo_available"]
[connection signal="convo_unavailable" from="Player" to="UIManager" method="_on_Player_convo_unavailable"]
[connection signal="body_entered" from="Player/TalkableArea" to="Player" method="_on_TalkableArea_body_entered"]
[connection signal="body_exited" from="Player/TalkableArea" to="Player" method="_on_TalkableArea_body_exited"]
